feat: listonlineplayer api&frontend feat: server metrics api&frontend feat: custom rcon select list refactor: database content
